# oi.client.webcam

./: CMakeLists.txt  Info.plist
include/: WebcamDeviceInterface.hpp
src/: Info.plist  OIClientWebcam.cpp  WebcamDeviceInterface.cpp
